Added random word generators

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         Choose new word: <input id='customWord'>
         <button type="button" onclick="setupCustomWord()">Restart</button>
         <button type="button" onclick="setup()">Restart with random word</button>
+        <button type="button" onclick="setupRandomWord()">Restart with random word (hard mode)</button>
       </p>
     </div>
     <div id="status"></div>
